Fix for bug 691103.  The pdfwrite device now considers FDArray fonts' FontMatrix and writes correct W/W2/DW/DW2 widths for CIDFont with unusual FontMatrix.  This also fixes a problem gs_font::orig_FontMatrix not being initialized for CIDFont. Bug687832.pdf and Bug690834.ps will show differences which are improvements.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10810 a1074d23-0009-0410-80fe-cf8c14f379e6